src/App.css
@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two');
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');

.App {
  background: white;
}

.action-bar {
  background: rgba(179, 229, 252, 1.0);
  position: fixed;
  top: 0px;
  width: 100vw;
  z-index: 1000;
  box-shadow: 1px;
  display: flex;
  justify-content: space-between;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

.button {
  cursor:  pointer;
  height:  48px;
  width:   48px;
  background: lightblue;
}

.button i {
  color: #fff;
  width: 50%;
  display: block;
  padding: 8px;
  font-size: 24pt;
}

.delete-button {

}

.upload-button-container {
}

.canvas-container {
  position: relative;
  margin-left: auto;
  margin-right: auto;
  margin-top: 48px;
}

.canvas {
  cursor: pointer;
}

.char-input {
  padding: 0;
  margin:  0;
  border:  none;
  outline: none;
  /* background: rgba(179, 229, 252, 0.5); */
  background: rgba(0, 0, 0, 0.0);
  border-radius: 10;
  display: block;
  border-radius:5px;
  -moz-border-radius:5px;
  -webkit-border-radius:5px;
  position: absolute;
  text-align: center;
  text-transform: uppercase;
  font-family: 'Shadows Into Light Two', cursive;
}

.char-input::selection {
  background-color: rgba(179, 229, 252, 1);
}

.char-input.highlighted {
  background: rgba(179, 229, 252, 0.5);
}

#upload {


}

#upload-button {
  display: none;
  z-index: -1;
}

